@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-05-20T16:24:42Z",
+  "timestamp" : "2024-05-21T08:23:51Z",
   "count_outdated" : 745,
   "uniques_outdated" : 364,
-  "count" : 768,
-  "uniques" : 381,
+  "count" : 769,
+  "uniques" : 382,
   "clones" : [
     {
       "timestamp": "2024-05-08T00:00:00Z",
@@ -112,6 +112,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2024-05-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
