@@ -1,5 +1,5 @@
 {
-  "count": 23,
+  "count": 24,
   "uniques": 6,
   "clones": [
     {
@@ -61,6 +61,11 @@
       "timestamp": "2024-05-20T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2024-05-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
