@@ -1,3 +1,12 @@
+2024-05-21T08:23:51Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9171375761 # 292
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-21
+* notice: last 14d: unq all: 6 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 364 745 / 381 768
+* notice: next accum: outdated-unq outdated-all / unq all: 364 745 / 382 769
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-05-21]
+
 2024-05-20T16:24:42Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9161819555 # 290
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-20
